--- a/0_readme.Rmd
+++ b/0_readme.Rmd
@@ -50,50 +50,50 @@ The data used in this study are publicly available:
 
 | BioProject   | Assay Type | source_name                                                | replicates | treatment                                       | Publication     | Abbreviation          |
 |--------------|------------|------------------------------------------------------------|------------|-------------------------------------------------|-----------------|-----------------------|
-| PRJNA605646  | RNA-Seq    | Naïve H9 ESC                                               | 2          | Naive human PSC   condition                     | _Io_ et al.       | nH9_Io                |
-| PRJNA605646  | RNA-Seq    | Naïve H9 ESC-derived   nTE_D1                              | 2          | ABPJ treatment for 1   day                      | _Io_ et al.       | H9_nTE_D1_Io          |
-| PRJNA605646  | RNA-Seq    | Naïve H9 ESC-derived   nTE_D2                              | 2          | ABPJ treatment for 2   days                     | _Io_ et al.       | H9_nTE_D2_Io          |
-| PRJNA605646  | RNA-Seq    | term Amnion   (Cont2,3,4,4b,6,7,8,9,11,12,14,15 RNA-seq)   | 2          | ABPJ treatment for 3   days                     | _Io_ et al.       | H9_nTE_D3_Io          |
-| PRJNA605646  | RNA-Seq    | Naïve H9 ESC-derived   nCT_P3                              | 2          | ACE treatment                                   | _Io_ et al.       | H9_nCT_P3_Io          |
-| PRJNA605646  | RNA-Seq    | Naïve H9 ESC-derived   nCT_P10                             | 2          | ACE treatment                                   | _Io_ et al.       | H9_nCT_P10_Io         |
-| PRJNA605646  | RNA-Seq    | Naïve H9 ESC-derived   nCT_P15                             | 2          | ACE treatment                                   | _Io_ et al.       | H9_nCT_P15_Io         |
-| PRJNA605646  | RNA-Seq    | Naïve PSC (Guo et al.   Development 2017)-derived nCT_P15  | 2          | ACE treatment                                   | _Io_ et al.       | cR_nCT_P15_Io         |
-| PRJNA605646  | RNA-Seq    | 409B2 hiPSC-derived   nCT_P15                              | 2          | ACE treatment                                   | _Io_ et al.       | iPS_nCT_P15_Io        |
-| PRJNA605646  | RNA-Seq    | 1st Trimester_TSC   (_Okae_ et al) (CT30)                    | 2          | _Okae_ et al. Cell Stem   Cell 2018               | _Io_ et al.       | CT_TSC__Okae_           |
-| PRJNA605646  | RNA-Seq    | nST from Naïve H9   ESC-derived nCT                        | 2          | modified from _Okae_ et   al. Cell Stem Cell 2018 | _Io_ et al.       | H9_nSCT_Io            |
-| PRJNA605646  | RNA-Seq    | nEVT from Naïve H9   ESC-derived nCT                       | 2          | modified from _Okae_ et   al. Cell Stem Cell 2018 | _Io_ et al.       | H9_nEVT_Io            |
-| PRJNA605646  | RNA-Seq    | Primed H9 ESC                                              | 2          | primed human PSC   condition                    | _Io_ et al.       | pH9_Io                |
-| PRJNA605646  | RNA-Seq    | pBAP_D1 from Primed   H9 ESC                               | 2          | MEF-CM with BAP   treatment                     | _Io_ et al.       | H9_pBAP_D1_Io         |
-| PRJNA605646  | RNA-Seq    | pBAP_D2 from Primed   H9 ESC                               | 2          | MEF-CM with BAP   treatment                     | _Io_ et al.       | H9_pBAP_D2_Io         |
-| PRJNA605646  | RNA-Seq    | pBAP_D3 from Primed   H9 ESC                               | 2          | MEF-CM with BAP   treatment                     | _Io_ et al.       | H9_pBAP_D3_Io         |
-| PRJNA605646  | RNA-Seq    | Cytotrophoblast at 7   gestational weeks                   | 2          | 7 gestational weeks                             | _Io_ et al.       | CT_7wk                |
-| PRJNA605646  | RNA-Seq    | Cytotrophoblast at 9   gestational weeks                   | 1          | 9 gestational weeks                             | _Io_ et al.       | CT_9wk                |
-| PRJNA605646  | RNA-Seq    | Cytotrophoblast at 11   gestational weeks                  | 1          | 11 gestational weeks                            | _Io_ et al.       | CT_11wk               |
-| PRJNA294733  | RNA-Seq    | H1 ESC-derived TB_BAP   D8 (large cells, >70 μm)           | 3          | BAP treatment                                   | _Yabe_ et al.     | H1_BAP_D8_>70_Yabe    |
-| PRJNA294733  | RNA-Seq    | H1 ESC-derived TB_BAP D8 (between   40-70 μm)              | 3          | BAP treatment                                   | _Yabe_ et al.     | H1_BAP_D8_40-70_Yabe  |
-| PRJNA294733  | RNA-Seq    | H1 ESC-derived TB_BAP   D8 (small cells, <40 μm)           | 3          | BAP treatment                                   | _Yabe_ et al.     | H1_BAP_D8_<40_Yabe    |
-| PRJNA294733  | RNA-Seq    | undifferentiated H1   ESC                                  | 3          | MEF-CM with FGF2   treatment                    | _Yabe_ et al.     | H1_Yabe               |
-| E-MTAB-10429 | RNA-Seq    | Blastocyst_TSC (_Okae_   et al) (BTS5, BTS11)                | 2          | _Okae_ et al. Cell Stem   Cell 2018               | _Sheridan_ et al. | BTS_TSC__Okae_          |
-| E-MTAB-10429 | RNA-Seq    | 1st Trimester_TSC   (_Okae_ et al) (CT27, CT29, CT30)        | 3          | _Okae_ et al. Cell Stem   Cell 2018               | _Sheridan_ et al. | CT_TSC__Okae_           |
-| E-MTAB-10429 | RNA-Seq    | Blastocyst_EVT (_Okae_   et al) (BTS5, BTS11)                | 2          | _Okae_ et al. Cell Stem   Cell 2018               | _Sheridan_ et al. | BTS_EVT__Okae_          |
-| E-MTAB-10429 | RNA-Seq    | 1st Trimester_EVT (_Okae_ et al) (CT27, CT29, CT30)          | 3          | _Okae_ et al. Cell Stem   Cell 2018               | _Sheridan_ et al. | CT_EVT__Okae_           |
-| E-MTAB-10429 | RNA-Seq    | Blastocyst_SCT (_Okae_   et al) (BTS5, BTS11)                | 2          | _Okae_ et al. Cell Stem   Cell 2018               | _Sheridan_ et al. | BTS_SCT__Okae_          |
-| E-MTAB-10429 | RNA-Seq    | 1st Trimester_TSC (_Okae_ et al) (CT27, CT29, CT30)          | 3          | _Okae_ et al. Cell Stem   Cell 2018               | _Sheridan_ et al. | CT_SCT__Okae_           |
-| E-MTAB-10429 | RNA-Seq    | Organoid_villous   (Turco et al) (R053,   X011, X021,X035) | 4          | _Turco_ et al. Nature   2018                      | _Sheridan_ et al. | org_villous           |
-| E-MTAB-10429 | RNA-Seq    | Organoid_EVT   (Turco et al) (R053,   X011, X021, x035)    | 4          | _Turco_ et al. Nature   2018                      | _Sheridan_ et al. | org_EVT               |
-| PRJNA352339  | RNA-Seq    | undifferentiated H9   ESC, feeder free                     | 3          | mTeSR                                           | _Shao_ et al.     | H9_ESC_Shao           |
-| PRJNA352339  | RNA-Seq    | H9 ESC-derived   amnion-like cells (3D amniogenesis)       | 3          | _Shao_ et al. Nature   Mater 2017                 | _Shao_ et al.     | H9_amnion_Shao        |
-| PRJNA276463  | RNA-Seq    | CC2 Amnion_18_female                                       | 1          | 18 gestational weeks                            | _Roost_ et al.    | amnion_18wk           |
-| PRJNA276463  | RNA-Seq    | CJ1 Amnion_9_male                                          | 2          | 9 gestational weeks                             | _Roost_ et al.    | amnion_9wk            |
-| PRJNA276463  | RNA-Seq    | CI1 Amnion_16_male                                         | 2          | 16 gestational weeks                            | _Roost_ et al.    | amnion_16wk           |
-| PRJNA276463  | RNA-Seq    | CR1 Amnion_22_male                                         | 2          | 22 gestational weeks                            | _Roost_ et al.    | amnion_22wk           |
-| PRJNA316992  | RNA-Seq    | Term Amnion   (Cont2,3,4,4b,6,7,8,9,11,12,14,15 RNA-seq)   | 12         | Term fetal amnion                               | _Suzuki_ et al.   | amnion_term           |
-| PRJNA720858  | snRNA-Seq  | H1 ESC-derived TB_BAP   D8 (20% O2)_snRNA-seq              | 2          | BAP treatment                                   | _Khan_ et al.     | H1_BAP_D8_20pcO2_Khan |
-| PRJNA720858  | snRNA-Seq  | H1 ESC-derived TB_BAP   D8 (5% O2)_snRNA-seq               | 2          | BAP treatment                                   | _Khan_ et al.     | H1_BAP_D8_5pcO2_Khan  |
-| PRJNA705594  | scRNA-Seq  | Naïve H9 ESC-derived   nTE_D2                              | 1          | ABPJ treatment                                  | _Io_ et al.       | H9_sc.nTE_D2_Io       |
-| PRJNA705594  | scRNA-Seq  | Naïve H9 ESC-derived   nTE_D3                              | 1          | ABPJ treatment                                  | _Io_ et al.       | H9_sc.nTE_D3_Io       |
-| PRJNA705594  | scRNA-Seq  | Naïve H9 ESC-derived   nCT_D5                              | 1          | ACE treatment                                   | _Io_ et al.       | H9_sc.nCT_D5_Io       |
-| PRJNA705594  | scRNA-Seq  | Naïve H9 ESC-derived   nCT_D10                             | 1          | ACE treatment                                   | _Io_ et al.       | H9_sc.nCT_D10_Io      |
+| [PRJNA605646](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA605646)  | RNA-Seq    | Naïve H9 ESC                                               | 2          | Naive human PSC   condition                     | Io _et al._       | nH9_Io                |
+| [PRJNA605646](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA605646)  | RNA-Seq    | Naïve H9 ESC-derived   nTE_D1                              | 2          | ABPJ treatment for 1   day                      | Io _et al._       | H9_nTE_D1_Io          |
+| [PRJNA605646](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA605646)  | RNA-Seq    | Naïve H9 ESC-derived   nTE_D2                              | 2          | ABPJ treatment for 2   days                     | Io _et al._       | H9_nTE_D2_Io          |
+| [PRJNA605646](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA605646)  | RNA-Seq    | term Amnion   (Cont2,3,4,4b,6,7,8,9,11,12,14,15 RNA-seq)   | 2          | ABPJ treatment for 3   days                     | Io _et al._       | H9_nTE_D3_Io          |
+| [PRJNA605646](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA605646)  | RNA-Seq    | Naïve H9 ESC-derived   nCT_P3                              | 2          | ACE treatment                                   | Io _et al._       | H9_nCT_P3_Io          |
+| [PRJNA605646](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA605646)  | RNA-Seq    | Naïve H9 ESC-derived   nCT_P10                             | 2          | ACE treatment                                   | Io _et al._       | H9_nCT_P10_Io         |
+| [PRJNA605646](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA605646)  | RNA-Seq    | Naïve H9 ESC-derived   nCT_P15                             | 2          | ACE treatment                                   | Io _et al._       | H9_nCT_P15_Io         |
+| [PRJNA605646](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA605646)  | RNA-Seq    | Naïve PSC (Guo _et al._   Development 2017)-derived nCT_P15  | 2          | ACE treatment                                   | Io _et al._       | cR_nCT_P15_Io         |
+| [PRJNA605646](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA605646)  | RNA-Seq    | 409B2 hiPSC-derived   nCT_P15                              | 2          | ACE treatment                                   | Io _et al._       | iPS_nCT_P15_Io        |
+| [PRJNA605646](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA605646)  | RNA-Seq    | 1st Trimester_TSC   (Okae _et al._ ) (CT30)                    | 2          | Okae _et al._ Cell Stem   Cell 2018               | Io _et al._       | CT_TSC_Okae           |
+| [PRJNA605646](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA605646)  | RNA-Seq    | nST from Naïve H9   ESC-derived nCT                        | 2          | modified from Okae _et al._ Cell Stem Cell 2018 | Io _et al._       | H9_nSCT_Io            |
+| [PRJNA605646](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA605646)  | RNA-Seq    | nEVT from Naïve H9   ESC-derived nCT                       | 2          | modified from Okae _et al._ Cell Stem Cell 2018 | Io _et al._       | H9_nEVT_Io            |
+| [PRJNA605646](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA605646)  | RNA-Seq    | Primed H9 ESC                                              | 2          | primed human PSC   condition                    | Io _et al._       | pH9_Io                |
+| [PRJNA605646](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA605646)  | RNA-Seq    | pBAP_D1 from Primed   H9 ESC                               | 2          | MEF-CM with BAP   treatment                     | Io _et al._       | H9_pBAP_D1_Io         |
+| [PRJNA605646](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA605646)  | RNA-Seq    | pBAP_D2 from Primed   H9 ESC                               | 2          | MEF-CM with BAP   treatment                     | Io _et al._       | H9_pBAP_D2_Io         |
+| [PRJNA605646](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA605646)  | RNA-Seq    | pBAP_D3 from Primed   H9 ESC                               | 2          | MEF-CM with BAP   treatment                     | Io _et al._       | H9_pBAP_D3_Io         |
+| [PRJNA605646](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA605646)  | RNA-Seq    | Cytotrophoblast at 7   gestational weeks                   | 2          | 7 gestational weeks                             | Io _et al._       | CT_7wk                |
+| [PRJNA605646](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA605646)  | RNA-Seq    | Cytotrophoblast at 9   gestational weeks                   | 1          | 9 gestational weeks                             | Io _et al._       | CT_9wk                |
+| [PRJNA605646](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA605646)  | RNA-Seq    | Cytotrophoblast at 11   gestational weeks                  | 1          | 11 gestational weeks                            | Io _et al._       | CT_11wk               |
+| [PRJNA294733](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA294733)  | RNA-Seq    | H1 ESC-derived TB_BAP   D8 (large cells, >70 μm)           | 3          | BAP treatment                                   | Yabe _et al._     | H1_BAP_D8_>70_Yabe    |
+| [PRJNA294733](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA294733)  | RNA-Seq    | H1 ESC-derived TB_BAP D8 (between   40-70 μm)              | 3          | BAP treatment                                   | Yabe _et al._     | H1_BAP_D8_40-70_Yabe  |
+| [PRJNA294733](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA294733)  | RNA-Seq    | H1 ESC-derived TB_BAP   D8 (small cells, <40 μm)           | 3          | BAP treatment                                   | Yabe _et al._     | H1_BAP_D8_<40_Yabe    |
+| [PRJNA294733](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA294733)  | RNA-Seq    | undifferentiated H1   ESC                                  | 3          | MEF-CM with FGF2   treatment                    | Yabe _et al._     | H1_Yabe               |
+| [E-MTAB-10429](https://www.ebi.ac.uk/arrayexpress/experiments/E-MTAB-10429/)  | RNA-Seq    | Blastocyst_TSC (Okae   _et al._ ) (BTS5, BTS11)                | 2          | Okae _et al._ Cell Stem   Cell 2018               | Sheridan _et al._ | BTS_TSC_Okae          |
+| [E-MTAB-10429](https://www.ebi.ac.uk/arrayexpress/experiments/E-MTAB-10429/)  | RNA-Seq    | 1st Trimester_TSC   (Okae _et al._ ) (CT27, CT29, CT30)        | 3          | Okae _et al._ Cell Stem   Cell 2018               | Sheridan _et al._ | CT_TSC_Okae           |
+| [E-MTAB-10429](https://www.ebi.ac.uk/arrayexpress/experiments/E-MTAB-10429/)  | RNA-Seq    | Blastocyst_EVT (Okae   _et al._ ) (BTS5, BTS11)                | 2          | Okae _et al._ Cell Stem   Cell 2018               | Sheridan _et al._ | BTS_EVT_Okae          |
+| [E-MTAB-10429](https://www.ebi.ac.uk/arrayexpress/experiments/E-MTAB-10429/)  | RNA-Seq    | 1st Trimester_EVT (Okae _et al._ ) (CT27, CT29, CT30)          | 3          | Okae _et al._ Cell Stem   Cell 2018               | Sheridan _et al._ | CT_EVT_Okae           |
+| [E-MTAB-10429](https://www.ebi.ac.uk/arrayexpress/experiments/E-MTAB-10429/)  | RNA-Seq    | Blastocyst_SCT (Okae   _et al._ ) (BTS5, BTS11)                | 2          | Okae _et al._ Cell Stem   Cell 2018               | Sheridan _et al._ | BTS_SCT_Okae          |
+| [E-MTAB-10429](https://www.ebi.ac.uk/arrayexpress/experiments/E-MTAB-10429/)  | RNA-Seq    | 1st Trimester_TSC (Okae _et al._ ) (CT27, CT29, CT30)          | 3          | Okae _et al._ Cell Stem   Cell 2018               | Sheridan _et al._ | CT_SCT_Okae           |
+| [E-MTAB-10429](https://www.ebi.ac.uk/arrayexpress/experiments/E-MTAB-10429/)  | RNA-Seq    | Organoid_villous   (Turco _et al._ ) (R053,   X011, X021,X035) | 4          | Turco _et al._ Nature   2018                      | Sheridan _et al._ | org_villous           |
+| [E-MTAB-10429](https://www.ebi.ac.uk/arrayexpress/experiments/E-MTAB-10429/)  | RNA-Seq    | Organoid_EVT   (Turco _et al._ ) (R053,   X011, X021, x035)    | 4          | Turco _et al._ Nature   2018                      | Sheridan _et al._ | org_EVT               |
+| [PRJNA352339](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA352339)  | RNA-Seq    | undifferentiated H9   ESC, feeder free                     | 3          | mTeSR                                           | Shao _et al._     | H9_ESC_Shao           |
+| [PRJNA352339](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA352339)  | RNA-Seq    | H9 ESC-derived   amnion-like cells (3D amniogenesis)       | 3          | Shao _et al._ Nature   Mater 2017                 | Shao _et al._     | H9_amnion_Shao        |
+| [PRJNA276463](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA276463)  | RNA-Seq    | CC2 Amnion_18_female                                       | 1          | 18 gestational weeks                            | Roost _et al._    | amnion_18wk           |
+| [PRJNA276463](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA276463)  | RNA-Seq    | CJ1 Amnion_9_male                                          | 2          | 9 gestational weeks                             | Roost _et al._    | amnion_9wk            |
+| [PRJNA276463](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA276463)  | RNA-Seq    | CI1 Amnion_16_male                                         | 2          | 16 gestational weeks                            | Roost _et al._    | amnion_16wk           |
+| [PRJNA276463](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA276463)  | RNA-Seq    | CR1 Amnion_22_male                                         | 2          | 22 gestational weeks                            | Roost _et al._    | amnion_22wk           |
+| [PRJNA316992](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA316992)  | RNA-Seq    | Term Amnion   (Cont2,3,4,4b,6,7,8,9,11,12,14,15 RNA-seq)   | 12         | Term fetal amnion                               | Suzuki _et al._   | amnion_term           |
+| [PRJNA720858](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA720858)  | snRNA-Seq  | H1 ESC-derived TB_BAP   D8 (20% O2)_snRNA-seq              | 2          | BAP treatment                                   | Khan _et al._     | H1_BAP_D8_20pcO2_Khan |
+| [PRJNA720858](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA720858)  | snRNA-Seq  | H1 ESC-derived TB_BAP   D8 (5% O2)_snRNA-seq               | 2          | BAP treatment                                   | Khan _et al._     | H1_BAP_D8_5pcO2_Khan  |
+| [PRJNA705594](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA705594)  | scRNA-Seq  | Naïve H9 ESC-derived   nTE_D2                              | 1          | ABPJ treatment                                  | Io _et al._       | H9_sc.nTE_D2_Io       |
+| [PRJNA705594](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA705594)  | scRNA-Seq  | Naïve H9 ESC-derived   nTE_D3                              | 1          | ABPJ treatment                                  | Io _et al._       | H9_sc.nTE_D3_Io       |
+| [PRJNA705594](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA705594)  | scRNA-Seq  | Naïve H9 ESC-derived   nCT_D5                              | 1          | ACE treatment                                   | Io _et al._       | H9_sc.nCT_D5_Io       |
+| [PRJNA705594](https://www.ncbi.nlm.nih.gov/bioproject/PRJNA705594)  | scRNA-Seq  | Naïve H9 ESC-derived   nCT_D10                             | 1          | ACE treatment                                   | Io _et al._       | H9_sc.nCT_D10_Io      |
 
 
 ### Other datasets
